--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nature Exploration</title>
+    <title>1001 nights Midterm</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Almendra&display=swap" rel="stylesheet">
 
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Escape the Genie’s Curse</h1>
+            <h1>"The Three Women of Baghdad" reimagined through Sindbad</h1>
         </header>
 
         <div id="story" class="story-text">
