--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1001 nights Midterm</title>
+    <title>Nature Exploration</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Almendra&display=swap" rel="stylesheet">
 
   </head>
 <body>
+    <div class="audio-controls">
+        <button id="toggle-music" class="themed-button">Play</button>
+    </div>
+        <audio id="background-music" src="music.mp3" loop></audio>
+
     <div class="container">
+
         <header>
-            <h1>"The Three Women of Baghdad" reimagined through Sindbad</h1>
+            <h1>Escape the Genie’s Curse</h1>
         </header>
 
         <div id="story" class="story-text">
